--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,16 +15,16 @@ tqdm = "^4.66.5"
 typer = "^0.12.5"
 numpy = "^2.1.1"
 moviepy = "^1.0.3"
+joblib = "^1.4.2"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.1.1"
 ruff = "^0.6.3"
 pyright = "^1.1.378"
+joblib-stubs = "^1.4.2.4.20240825"
 
 [tool.poetry.scripts]
 main = "reactions_generator.cli:main"
-render-card = "reactions_generator.cli:run_render_card"
-render-reaction = "reactions_generator.cli:run_render_reaction"
 
 [tool.pyright]
 typeCheckingMode = "strict"
