--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,12 +10,11 @@ readme = "README.md"
 python = "^3.12"
 requests = "^2.32.3"
 pillow = "^10.4.0"
-click = "^8.1.7"
 tqdm = "^4.66.5"
 typer = "^0.12.5"
 numpy = "^2.1.1"
-moviepy = "^1.0.3"
 joblib = "^1.4.2"
+ffmpeg-python = "^0.2.0"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.1.1"
