--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ tqdm = "^4.66.5"
 typer = "^0.12.5"
 numpy = "^2.1.1"
 ffmpeg-python = "^0.2.0"
+cairosvg = "^2.7.1"
 
 [tool.poetry.group.dev.dependencies]
 jupyter = "^1.1.1"
