Refactor GitHub Actions workflows for nightly and release Docker image builds

--- a/.github/workflows/release-docker.yml
+++ b/.github/workflows/release-docker.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        description: "Semver version (without 'v')"
+        description: Name of release (without 'v')
         required: true
 
 env:
@@ -12,7 +12,7 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  build-and-push:
+  build-and-push-main:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -21,9 +21,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -35,7 +32,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract metadata (labels, tags)
+      - name: Extract metadata (labels, tags) for Docker
         id: meta
         uses: docker/metadata-action@v5
         with:
@@ -43,13 +40,11 @@ jobs:
           tags: |
             type=raw,value=latest
             type=semver,pattern={{version}},value=${{ github.event.inputs.version }}
+            type=schedule,pattern={{date 'YYYYMMDD'}}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          context: .
-          file: ./Dockerfile
-          platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
