--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,9 @@ __pycache__
 out
 tmp
 research.ipynb
-*.ttf
+helvetica.ttf
+helvetica_bold.ttf
+cour.ttf
+fonts/custom/*
+fonts/fira/*
+fonts/inter/*
